--- a/src/Components/Components.css
+++ b/src/Components/Components.css
@@ -1,3 +1,15 @@
+.banner {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  width: 100%;
+}
+.bannerContainer {
+  display: flex;
+  justify-content: center;
+  width: 50%;
+}
 .card {
   box-shadow: 0.5px 0.5px 1px #a9a9a9;
 }
@@ -44,4 +56,10 @@
   flex-direction: row;
   justify-content: center;
   align-items: center;
+}
+.cardButtonText {
+  font-size: 23px;
+  font-weight: 300;
+  padding-left: 10px;
+  margin-bottom: 0px;
 }
