--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,5 @@
 .app {
   text-align: center;
-  height: 5000px;
 }
 .logo {
   max-width: 100%;
@@ -8,7 +7,7 @@
 }
 .header {
   background-color: black;
-  height: 205px;
+  height: 195px;
   color: white;
 }
 .top-header {
@@ -17,13 +16,6 @@
   justify-content: space-between;
   height: 140px;
   margin: 0px;
-}
-.bottom-header {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  align-items: center;
-  height: 65px;
 }
 .banner {
   height: 90px;
@@ -36,16 +28,13 @@
 .featured {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
-  box-shadow: 1px 2px 5px #a9a9a9;
+  overflow-y: scroll;
 }
 .featured-content {
-  padding-top: 10px;
-  padding-bottom: 10px;
+  padding: 10px;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
-  width: 90%;
 }
 .categories {
   padding-top: 10px;
