--- a/src/Components/Components.css
+++ b/src/Components/Components.css
@@ -12,6 +12,7 @@
 }
 .card {
   box-shadow: 0.5px 0.5px 1px #a9a9a9;
+  margin: 10px;
 }
 .cardLineOne {
   padding-left: 5px;
@@ -35,21 +36,12 @@
   font-size: 20px;
 }
 .cardImage {
-  margin: auto;
   height: auto;
-  max-height: 320px;
-  width: 320px;
+  height: 250px;
+  width: 250px;
 }
 .cardInfo {
   background-color: #e6e6e6;
-}
-.navBar {
-  width: 100%;
-  height: 45px;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  align-items: center;
 }
 .addCartButton {
   display: flex;
@@ -62,4 +54,23 @@
   font-weight: 300;
   padding-left: 10px;
   margin-bottom: 0px;
+}
+.meganavbar {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+.dropdown {
+  width: 100%;
+  height: 50px;
+  background-color: black;
+  color: white;
+  font-size: 25px;
+}
+.thirds {
+  width: 33%;
+  /*border: 1px solid rgba(255, 0, 0, .2);*/
+}
+.dropdownMenu {
+  width: 100%;
 }
