--- a/src/Components/Components.css
+++ b/src/Components/Components.css
@@ -74,3 +74,30 @@
 .dropdownMenu {
   width: 100%;
 }
+.footer {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  background-color: black;
+  height: 150px;
+}
+.copyright {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  color: 	#808080;
+}
+.cart-card {
+  display: flex;
+  justify-content: space-between;
+}
+.cart-card-info {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  text-align: right;
+  height: 120px;
+  width: 100%;
+}
