--- a/src/Components/Components.css
+++ b/src/Components/Components.css
@@ -98,6 +98,17 @@
   flex-direction: column;
   align-items: flex-end;
   text-align: right;
-  height: 120px;
+  height: 90px;
   width: 100%;
+}
+.cart-text {
+  margin: 1px;
+}
+.cart-total {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: flex-end;
+  margin-top: 40px;
+  margin-left: 30px;
 }
